<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_home_layout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="100dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="100dp"
    android:background="@color/teal_200"
    android:backgroundTint="@color/teal_200">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:text="@string/tip_calculator1"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#880E4F"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <EditText
        android:id="@+id/ip_bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:autofillHints=""
        android:hint="@string/enter_bill_amount"
        android:ems="7"
        android:inputType="numberDecimal"
        android:maxLength="15"
        android:minHeight="48dp"
        android:lineBreakStyle="normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_click_per15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:text="@string/_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ip_bill_amount" />

    <Button
        android:id="@+id/button_click_per18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/_18"
        app:layout_constraintStart_toEndOf="@id/button_click_per15"
        app:layout_constraintTop_toBottomOf="@id/ip_bill_amount" />

    <Button
        android:id="@+id/button_click_per20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/_20"
        app:layout_constraintStart_toEndOf="@id/button_click_per18"
        app:layout_constraintTop_toBottomOf="@id/ip_bill_amount"
        />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:text="@string/tip_99_99_total_bill_99_99"
        android:textColor="#004D40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_click_per18" />

</androidx.constraintlayout.widget.ConstraintLayout>